# bloom_filters

./: CMakeLists.txt  main.cpp  main.cu
results/: base.csv  constant.csv  hybrid.csv  shared.csv  shared_buffer.csv
utils/: BloomFilters.h  cuda_bloom.cuh
